// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Policy Resolver Correctly Resolves All Policies per Application List Query 1`] = `
Object {
  "data": Object {
    "policiesInApplication": Array [
      Object {
        "cluster": "cluster1",
        "detail": Object {
          "exclude_namespace": Array [
            "kube-*",
          ],
          "include_namespace": Array [
            "default",
          ],
        },
        "enforcement": "inform",
        "metadata": Object {
          "annotations": Object {
            "policy.mcm.ibm.com/categories": "SystemAndCommunicationsProtections",
            "policy.mcm.ibm.com/controls": "SecretEncryption",
            "policy.mcm.ibm.com/standards": "FISMA",
            "seed-generation": "2",
          },
          "creationTimestamp": "2019-10-14T07:08:34Z",
          "name": "mcm.policy-namespace",
          "namespace": "cluster1",
          "resourceVersion": "8677996",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/cluster1/policies/mcm.policy-namespace",
          "uid": "6f6dacb8-ee51-11e9-946e-005056a04901",
        },
        "raw": Object {
          "apiVersion": "policy.mcm.ibm.com/v1alpha1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.mcm.ibm.com/categories": "SystemAndCommunicationsProtections",
              "policy.mcm.ibm.com/controls": "SecretEncryption",
              "policy.mcm.ibm.com/standards": "FISMA",
              "seed-generation": "2",
            },
            "creationTimestamp": "2019-10-14T07:08:34Z",
            "finalizers": Array [
              "policy.finalizer.mcm.ibm.com",
              "sync.finalizer.mcm.ibm.com",
            ],
            "generation": 2,
            "labels": Object {
              "parent-namespace": "mcm",
              "parent-policy": "policy-namespace",
            },
            "name": "mcm.policy-namespace",
            "namespace": "cluster1",
            "resourceVersion": "8677996",
            "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/cluster1/policies/mcm.policy-namespace",
            "uid": "6f6dacb8-ee51-11e9-946e-005056a04901",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "object-templates": Array [
              Object {
                "complianceType": "musthave",
                "objectDefinition": Object {
                  "apiVersion": "v1",
                  "kind": "Namespace",
                  "metadata": Object {
                    "name": "prod",
                  },
                },
                "status": Object {
                  "Compliant": "NonCompliant",
                  "Validity": Object {},
                  "conditions": Array [
                    Object {
                      "lastTransitionTime": "2019-10-14T07:08:36Z",
                      "message": "namespaces \`prod\` is missing, and should be created",
                      "reason": "K8s missing a must have object",
                      "status": "True",
                      "type": "violation",
                    },
                  ],
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "compliant": "NonCompliant",
          },
        },
        "status": Object {
          "compliant": "NonCompliant",
        },
      },
    ],
  },
}
`;

exports[`Policy Resolver Correctly Resolves All Policies per Cluster List Query 1`] = `
Object {
  "data": Object {
    "policiesInCluster": Array [
      Object {
        "cluster": null,
        "detail": Object {
          "exclude_namespace": Array [
            "kube-*",
          ],
          "include_namespace": Array [
            "default",
          ],
        },
        "enforcement": "inform",
        "metadata": Object {
          "annotations": Object {
            "policy.mcm.ibm.com/categories": "SystemAndCommunicationsProtections",
            "policy.mcm.ibm.com/controls": "SecretEncryption",
            "policy.mcm.ibm.com/standards": "FISMA",
            "seed-generation": "2",
          },
          "creationTimestamp": "2019-10-14T07:08:34Z",
          "name": "mcm.policy-namespace",
          "namespace": "cluster1",
          "resourceVersion": "8677996",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/cluster1/policies/mcm.policy-namespace",
          "uid": "6f6dacb8-ee51-11e9-946e-005056a04901",
        },
        "raw": Object {
          "apiVersion": "policy.mcm.ibm.com/v1alpha1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.mcm.ibm.com/categories": "SystemAndCommunicationsProtections",
              "policy.mcm.ibm.com/controls": "SecretEncryption",
              "policy.mcm.ibm.com/standards": "FISMA",
              "seed-generation": "2",
            },
            "creationTimestamp": "2019-10-14T07:08:34Z",
            "finalizers": Array [
              "policy.finalizer.mcm.ibm.com",
              "sync.finalizer.mcm.ibm.com",
            ],
            "generation": 2,
            "labels": Object {
              "parent-namespace": "mcm",
              "parent-policy": "policy-namespace",
            },
            "name": "mcm.policy-namespace",
            "namespace": "cluster1",
            "resourceVersion": "8677996",
            "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/cluster1/policies/mcm.policy-namespace",
            "uid": "6f6dacb8-ee51-11e9-946e-005056a04901",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "object-templates": Array [
              Object {
                "complianceType": "musthave",
                "objectDefinition": Object {
                  "apiVersion": "v1",
                  "kind": "Namespace",
                  "metadata": Object {
                    "name": "prod",
                  },
                },
                "status": Object {
                  "Compliant": "NonCompliant",
                  "Validity": Object {},
                  "conditions": Array [
                    Object {
                      "lastTransitionTime": "2019-10-14T07:08:36Z",
                      "message": "namespaces \`prod\` is missing, and should be created",
                      "reason": "K8s missing a must have object",
                      "status": "True",
                      "type": "violation",
                    },
                  ],
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "compliant": "NonCompliant",
          },
        },
        "status": Object {
          "compliant": "NonCompliant",
        },
      },
      Object {
        "cluster": null,
        "detail": Object {
          "exclude_namespace": Array [
            "kube-*",
          ],
          "include_namespace": Array [
            "default",
          ],
        },
        "enforcement": "inform",
        "metadata": Object {
          "annotations": Object {
            "policy.mcm.ibm.com/categories": "",
            "policy.mcm.ibm.com/controls": "",
            "policy.mcm.ibm.com/standards": "",
            "seed-generation": "1",
          },
          "creationTimestamp": "2019-10-16T15:30:06Z",
          "name": "mcm.policy-namespace-1",
          "namespace": "cluster1",
          "resourceVersion": "10321887",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/cluster1/policies/mcm.policy-namespace-1",
          "uid": "d4b5c896-f029-11e9-946e-005056a04901",
        },
        "raw": Object {
          "apiVersion": "policy.mcm.ibm.com/v1alpha1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.mcm.ibm.com/categories": "",
              "policy.mcm.ibm.com/controls": "",
              "policy.mcm.ibm.com/standards": "",
              "seed-generation": "1",
            },
            "creationTimestamp": "2019-10-16T15:30:06Z",
            "finalizers": Array [
              "sync.finalizer.mcm.ibm.com",
              "policy.finalizer.mcm.ibm.com",
            ],
            "generation": 1,
            "labels": Object {
              "parent-namespace": "mcm",
              "parent-policy": "policy-namespace-1",
            },
            "name": "mcm.policy-namespace-1",
            "namespace": "cluster1",
            "resourceVersion": "10321887",
            "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/cluster1/policies/mcm.policy-namespace-1",
            "uid": "d4b5c896-f029-11e9-946e-005056a04901",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "object-templates": Array [
              Object {
                "complianceType": "musthave",
                "objectDefinition": Object {
                  "apiVersion": "v1",
                  "kind": "Namespacefake",
                  "metadata": Object {
                    "name": "prod",
                  },
                },
                "status": Object {
                  "Validity": Object {},
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {},
        },
        "status": "unknown",
      },
      Object {
        "cluster": null,
        "detail": Object {
          "exclude_namespace": Array [
            "kube-*",
          ],
          "include_namespace": Array [
            "default",
          ],
        },
        "enforcement": "inform",
        "metadata": Object {
          "annotations": Object {
            "policy.mcm.ibm.com/categories": "SystemAndCommunicationsProtections",
            "policy.mcm.ibm.com/controls": "MutationAdvisor",
            "policy.mcm.ibm.com/standards": "FISMA, Test",
            "seed-generation": "71770",
          },
          "creationTimestamp": "2019-10-14T07:08:34Z",
          "name": "mcm.policy-role",
          "namespace": "cluster1",
          "resourceVersion": "10560598",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/cluster1/policies/mcm.policy-role",
          "uid": "6f6eb6bc-ee51-11e9-946e-005056a04901",
        },
        "raw": Object {
          "apiVersion": "policy.mcm.ibm.com/v1alpha1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.mcm.ibm.com/categories": "SystemAndCommunicationsProtections",
              "policy.mcm.ibm.com/controls": "MutationAdvisor",
              "policy.mcm.ibm.com/standards": "FISMA, Test",
              "seed-generation": "71770",
            },
            "creationTimestamp": "2019-10-14T07:08:34Z",
            "finalizers": Array [
              "sync.finalizer.mcm.ibm.com",
              "policy.finalizer.mcm.ibm.com",
            ],
            "generation": 71770,
            "labels": Object {
              "parent-namespace": "mcm",
              "parent-policy": "policy-role",
            },
            "name": "mcm.policy-role",
            "namespace": "cluster1",
            "resourceVersion": "10560598",
            "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/cluster1/policies/mcm.policy-role",
            "uid": "6f6eb6bc-ee51-11e9-946e-005056a04901",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "remediationAction": "inform",
            "role-templates": Array [
              Object {
                "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                "complianceType": "musthave",
                "metadata": Object {
                  "creationTimestamp": null,
                  "name": "operator-role-policy",
                },
                "rules": Array [
                  Object {
                    "complianceType": "musthave",
                    "policyRule": Object {
                      "apiGroups": Array [
                        "extensions",
                        "apps",
                      ],
                      "resources": Array [
                        "deployments",
                      ],
                      "verbs": Array [
                        "get",
                        "list",
                        "watch",
                        "create",
                        "delete",
                        "patch",
                      ],
                    },
                  },
                  Object {
                    "complianceType": "mustnothave",
                    "policyRule": Object {
                      "apiGroups": Array [
                        "core",
                      ],
                      "resources": Array [
                        "secrets",
                      ],
                      "verbs": Array [
                        "get",
                        "list",
                        "watch",
                        "delete",
                        "create",
                        "update",
                        "patch",
                      ],
                    },
                  },
                ],
                "selector": Object {
                  "matchLabels": Object {
                    "dev": "true",
                  },
                },
                "status": Object {
                  "Compliant": "NonCompliant",
                  "Validity": Object {
                    "valid": true,
                  },
                  "conditions": Array [
                    Object {
                      "lastTransitionTime": "2019-10-17T07:17:52Z",
                      "message": "k8s RBAC role is missing: operator-role-policy",
                      "reason": "K8s RBAC role is missing",
                      "status": "True",
                      "type": "completed",
                    },
                  ],
                },
              },
            ],
          },
          "status": Object {
            "compliant": "NonCompliant",
            "valid": true,
          },
        },
        "status": Object {
          "compliant": "NonCompliant",
          "valid": true,
        },
      },
      Object {
        "cluster": null,
        "detail": Object {
          "exclude_namespace": Array [
            "kube-*",
          ],
          "include_namespace": Array [
            "kube-system",
          ],
        },
        "enforcement": "inform",
        "metadata": Object {
          "annotations": Object {
            "policy.mcm.ibm.com/categories": "SystemAndInformationIntegrity",
            "policy.mcm.ibm.com/controls": "MutationAdvisor",
            "policy.mcm.ibm.com/standards": "HIPAA",
            "seed-generation": "4",
          },
          "creationTimestamp": "2019-10-16T18:11:03Z",
          "name": "mcm.policy-vulnerabilitypolicy",
          "namespace": "cluster1",
          "resourceVersion": "10540114",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/cluster1/policies/mcm.policy-vulnerabilitypolicy",
          "uid": "50d98c74-f040-11e9-946e-005056a04901",
        },
        "raw": Object {
          "apiVersion": "policy.mcm.ibm.com/v1alpha1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.mcm.ibm.com/categories": "SystemAndInformationIntegrity",
              "policy.mcm.ibm.com/controls": "MutationAdvisor",
              "policy.mcm.ibm.com/standards": "HIPAA",
              "seed-generation": "4",
            },
            "creationTimestamp": "2019-10-16T18:11:03Z",
            "finalizers": Array [
              "policy.finalizer.mcm.ibm.com",
              "sync.finalizer.mcm.ibm.com",
            ],
            "generation": 3,
            "labels": Object {
              "parent-namespace": "mcm",
              "parent-policy": "policy-vulnerabilitypolicy",
            },
            "name": "mcm.policy-vulnerabilitypolicy",
            "namespace": "cluster1",
            "resourceVersion": "10540114",
            "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/cluster1/policies/mcm.policy-vulnerabilitypolicy",
            "uid": "50d98c74-f040-11e9-946e-005056a04901",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "kube-system",
              ],
            },
            "policy-templates": Array [
              Object {
                "objectDefinition": Object {
                  "apiVersion": "policies.ibm.com/v1alpha1",
                  "kind": "VulnerabilityPolicy",
                  "metadata": Object {
                    "label": Object {
                      "category": "System-Integrity",
                    },
                    "name": "policy-vulnerabilitypolicy-example",
                  },
                  "spec": Object {
                    "namespaceSelector": Object {
                      "exclude": Array [
                        "kube-system",
                      ],
                      "include": Array [
                        "default",
                        "kube-*",
                      ],
                    },
                    "remediationAction": "inform",
                    "severity": "medium",
                  },
                },
                "status": Object {
                  "Compliant": "Compliant",
                  "Validity": Object {},
                  "conditions": Array [
                    Object {
                      "lastTransitionTime": "2019-10-17T05:24:23Z",
                      "message": "Compliant; 0 Vulnerable pods detected in namespace \`kube-public\`; 0 Vulnerable pods detected in namespace \`default\`",
                      "reason": "policy: cluster1/policy-vulnerabilitypolicy-example",
                      "status": "True",
                      "type": "completed",
                    },
                  ],
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "compliant": "Compliant",
          },
        },
        "status": Object {
          "compliant": "Compliant",
        },
      },
    ],
  },
}
`;

exports[`Policy Resolver Correctly Resolves Cluster List Query 1`] = `
Object {
  "data": Object {
    "clustersInPolicy": Array [
      Object {
        "apiVersion": null,
        "kind": null,
        "metadata": Object {
          "annotations": Object {
            "mcm.ibm.com/deployer-prefix": "md",
            "mcm.ibm.com/secretRef": "cluster1-federation-secret",
            "mcm.ibm.com/user-group": "aGNtOmNsdXN0ZXJzLHN5c3RlbTphdXRoZW50aWNhdGVk",
            "mcm.ibm.com/user-identity": "aGNtOmNsdXN0ZXJzOmNsdXN0ZXIxOmNsdXN0ZXIx",
          },
          "labels": Object {
            "cluster1": "cluster1",
            "environment": "Dev",
            "name": "cluster1",
            "region": "US",
          },
          "name": "cluster1",
          "namespace": "cluster1",
          "selfLink": "/apis/mcm.ibm.com/v1alpha1/namespaces/cluster1/clusterstatuses/cluster1",
          "uid": "c0eb1c8b-e482-11e9-aa00-96bb9600cc18",
        },
        "name": "cluster1",
        "policy": Object {
          "apiVersion": "policy.mcm.ibm.com/v1alpha1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.mcm.ibm.com/categories": "SystemAndCommunicationsProtections",
              "policy.mcm.ibm.com/controls": "SecretEncryption",
              "policy.mcm.ibm.com/standards": "FISMA",
              "seed-generation": "2",
            },
            "creationTimestamp": "2019-10-14T07:08:34Z",
            "finalizers": Array [
              "policy.finalizer.mcm.ibm.com",
              "sync.finalizer.mcm.ibm.com",
            ],
            "generation": 2,
            "labels": Object {
              "parent-namespace": "mcm",
              "parent-policy": "policy-namespace",
            },
            "name": "mcm.policy-namespace",
            "namespace": "cluster1",
            "resourceVersion": "8677996",
            "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/cluster1/policies/mcm.policy-namespace",
            "uid": "6f6dacb8-ee51-11e9-946e-005056a04901",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "object-templates": Array [
              Object {
                "complianceType": "musthave",
                "objectDefinition": Object {
                  "apiVersion": "v1",
                  "kind": "Namespace",
                  "metadata": Object {
                    "name": "prod",
                  },
                },
                "status": Object {
                  "Compliant": "NonCompliant",
                  "Validity": Object {},
                  "conditions": Array [
                    Object {
                      "lastTransitionTime": "2019-10-14T07:08:36Z",
                      "message": "namespaces \`prod\` is missing, and should be created",
                      "reason": "K8s missing a must have object",
                      "status": "True",
                      "type": "violation",
                    },
                  ],
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "compliant": "NonCompliant",
          },
        },
        "spec": Object {
          "consoleURL": "https://9.42.82.160:8443",
        },
        "status": null,
        "total": "1",
        "violated": "1",
      },
      Object {
        "apiVersion": null,
        "kind": null,
        "metadata": Object {
          "annotations": Object {
            "mcm.ibm.com/deployer-prefix": "md",
            "mcm.ibm.com/secretRef": "clusterhub-federation-secret",
            "mcm.ibm.com/user-group": "aGNtOmNsdXN0ZXJzLHN5c3RlbTphdXRoZW50aWNhdGVk",
            "mcm.ibm.com/user-identity": "aGNtOmNsdXN0ZXJzOmNsdXN0ZXJodWI6Y2x1c3Rlcmh1Yg==",
          },
          "labels": Object {
            "environment": "Dev",
            "name": "clusterhub",
            "region": "US",
          },
          "name": "clusterhub",
          "namespace": "clusterhub",
          "selfLink": "/apis/mcm.ibm.com/v1alpha1/namespaces/clusterhub/clusterstatuses/clusterhub",
          "uid": "96c98100-e482-11e9-aa00-96bb9600cc18",
        },
        "name": "clusterhub",
        "policy": Object {
          "apiVersion": "policy.mcm.ibm.com/v1alpha1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.mcm.ibm.com/categories": "SystemAndCommunicationsProtections",
              "policy.mcm.ibm.com/controls": "SecretEncryption",
              "policy.mcm.ibm.com/standards": "FISMA",
              "seed-generation": "2",
            },
            "creationTimestamp": "2019-10-14T07:10:34Z",
            "finalizers": Array [
              "propagator.finalizer.mcm.ibm.com",
              "finalizer.policies.ibm.com",
              "policy.finalizer.mcm.ibm.com",
            ],
            "generation": 2,
            "labels": Object {
              "parent-namespace": "mcm",
              "parent-policy": "policy-namespace",
            },
            "name": "mcm.policy-namespace",
            "namespace": "clusterhub",
            "ownerReferences": Array [
              Object {
                "apiVersion": "policy.mcm.ibm.com/v1alpha1",
                "blockOwnerDeletion": true,
                "controller": true,
                "kind": "Policy",
                "name": "mcm.policy-namespace",
                "uid": "7f62f150-e617-11e9-bf67-005056a0b88e",
              },
            ],
            "resourceVersion": "7886410",
            "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/clusterhub/policies/mcm.policy-namespace",
            "uid": "b70b74e8-ee51-11e9-bf6a-005056a0b88e",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "object-templates": Array [
              Object {
                "complianceType": "musthave",
                "objectDefinition": Object {
                  "apiVersion": "v1",
                  "kind": "Namespace",
                  "metadata": Object {
                    "name": "prod",
                  },
                },
                "status": Object {
                  "Compliant": "NonCompliant",
                  "Validity": Object {},
                  "conditions": Array [
                    Object {
                      "lastTransitionTime": "2019-10-14T10:33:59Z",
                      "message": "namespaces \`prod\` is missing, and should be created",
                      "reason": "K8s missing a must have object",
                      "status": "True",
                      "type": "violation",
                    },
                  ],
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "compliant": "NonCompliant",
          },
        },
        "spec": Object {
          "consoleURL": "https://9.42.82.240:8443",
        },
        "status": null,
        "total": "1",
        "violated": "1",
      },
    ],
  },
}
`;

exports[`Policy Resolver Correctly Resolves Create Policy Mutation 1`] = `
Object {
  "data": Object {
    "createPolicy": Array [
      Object {
        "apiVersion": "policy.mcm.ibm.com/v1alpha1",
        "kind": "Policy",
        "metadata": Object {
          "creationTimestamp": "2018-09-06T17:12:34Z",
          "generation": 1,
          "name": "test-policy",
          "namespace": "default",
          "resourceVersion": "4385854",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/default/policies/test-policy",
          "uid": "0c388331-b1f8-11e8-9a12-005056a0d11b",
        },
        "spec": Object {
          "namespaces": Object {
            "exclude": Array [
              "kube*",
            ],
            "include": Array [
              "default",
            ],
          },
          "remediationAction": "enforce",
          "role-templates": Array [
            Object {
              "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
              "complianceType": "musthave",
              "kind": "RoleTemplate",
              "metadata": Object {
                "name": "test-role",
                "namespace": "",
              },
              "rules": Array [
                Object {
                  "PolicyRule": Object {
                    "apiGroups": Array [
                      "extensions",
                      "apps",
                    ],
                    "resources": Array [
                      "deployments",
                    ],
                    "verbs": Array [
                      "get",
                      "list",
                      "watch",
                      "delete",
                    ],
                  },
                  "complianceType": "musthave",
                },
                Object {
                  "PolicyRule": Object {
                    "apiGroups": Array [
                      "core",
                    ],
                    "resources": Array [
                      "pods",
                    ],
                    "verbs": Array [
                      "create",
                      "update",
                      "patch",
                    ],
                  },
                  "complianceType": "mustnothave",
                },
                Object {
                  "PolicyRule": Object {
                    "apiGroups": Array [
                      "core",
                    ],
                    "resources": Array [
                      "secrets",
                    ],
                    "verbs": Array [
                      "get",
                      "watch",
                      "list",
                      "create",
                      "delete",
                      "update",
                      "patch",
                    ],
                  },
                },
              ],
              "selector": Object {
                "matchLabels": Object {
                  "cloud": "IBM",
                },
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`Policy Resolver Correctly Resolves Delete Policy Mutation 1`] = `
Object {
  "data": Object {
    "deletePolicy": "test-policy",
  },
}
`;

exports[`Policy Resolver Correctly Resolves Single Policy Query 1`] = `
Object {
  "data": Object {
    "policies": Array [
      Object {
        "cluster": "calamari",
        "detail": Object {
          "exclude_namespace": Array [
            "*",
          ],
          "include_namespace": Array [
            "*",
          ],
        },
        "enforcement": "inform",
        "message": "-",
        "metadata": Object {
          "annotations": Object {
            "kubectl.kubernetes.io/last-applied-configuration": "{\\"apiVersion\\":\\"policies.open-cluster-management.io/v1\\",\\"kind\\":\\"Policy\\",\\"metadata\\":{\\"annotations\\":{\\"policies.open-cluster-management.io/categories\\":\\"PR.DS DataSecurity\\",\\"policies.open-cluster-management.io/controls\\":\\"PR.DS-2 Data-in-transit\\",\\"policies.open-cluster-management.io/standards\\":\\"NIST-CSF\\"},\\"name\\":\\"case1-test-policy\\",\\"namespace\\":\\"default\\"},\\"spec\\":{\\"disabled\\":false,\\"policy-templates\\":[{\\"objectDefinition\\":{\\"apiVersion\\":\\"policies.ibm.com/v1alpha1\\",\\"kind\\":\\"TrustedContainerPolicy\\",\\"metadata\\":{\\"name\\":\\"case1-test-policy-trustedcontainerpolicy\\"},\\"spec\\":{\\"imageRegistry\\":\\"quay.io\\",\\"namespaceSelector\\":{\\"exclude\\":[\\"kube-system\\"],\\"include\\":[\\"default\\"]},\\"remediationAction\\":\\"inform\\",\\"severity\\":\\"low\\"}}}],\\"remediationAction\\":\\"inform\\"}}
",
            "policies.open-cluster-management.io/categories": "PR.DS DataSecurity",
            "policies.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
            "policies.open-cluster-management.io/standards": "NIST-CSF",
          },
          "creationTimestamp": "2020-05-17T22:56:03Z",
          "name": "default.case1-test-policy",
          "namespace": "calamari",
          "resourceVersion": "27550274",
          "selfLink": "/apis/policies.open-cluster-management.io/v1/namespaces/calamari/policies/default.case1-test-policy",
          "uid": "fcaf4465-0530-47e5-bbd6-b19c3b28699a",
        },
        "objectTemplates": Array [],
        "policyTemplates": Array [
          Object {
            "apiVersion": "policies.ibm.com/v1alpha1",
            "complianceType": "",
            "kind": "TrustedContainerPolicy",
            "lastTransition": "",
            "name": "case1-test-policy-trustedcontainerpolicy",
            "raw": Object {
              "objectDefinition": Object {
                "apiVersion": "policies.ibm.com/v1alpha1",
                "kind": "TrustedContainerPolicy",
                "metadata": Object {
                  "name": "case1-test-policy-trustedcontainerpolicy",
                },
                "spec": Object {
                  "imageRegistry": "quay.io",
                  "namespaceSelector": Object {
                    "exclude": Array [
                      "kube-system",
                    ],
                    "include": Array [
                      "default",
                    ],
                  },
                  "remediationAction": "inform",
                  "severity": "low",
                },
              },
              "templateType": "policy-templates",
            },
            "status": "Compliant",
          },
        ],
        "raw": Object {
          "apiVersion": "policies.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "kubectl.kubernetes.io/last-applied-configuration": "{\\"apiVersion\\":\\"policies.open-cluster-management.io/v1\\",\\"kind\\":\\"Policy\\",\\"metadata\\":{\\"annotations\\":{\\"policies.open-cluster-management.io/categories\\":\\"PR.DS DataSecurity\\",\\"policies.open-cluster-management.io/controls\\":\\"PR.DS-2 Data-in-transit\\",\\"policies.open-cluster-management.io/standards\\":\\"NIST-CSF\\"},\\"name\\":\\"case1-test-policy\\",\\"namespace\\":\\"default\\"},\\"spec\\":{\\"disabled\\":false,\\"policy-templates\\":[{\\"objectDefinition\\":{\\"apiVersion\\":\\"policies.ibm.com/v1alpha1\\",\\"kind\\":\\"TrustedContainerPolicy\\",\\"metadata\\":{\\"name\\":\\"case1-test-policy-trustedcontainerpolicy\\"},\\"spec\\":{\\"imageRegistry\\":\\"quay.io\\",\\"namespaceSelector\\":{\\"exclude\\":[\\"kube-system\\"],\\"include\\":[\\"default\\"]},\\"remediationAction\\":\\"inform\\",\\"severity\\":\\"low\\"}}}],\\"remediationAction\\":\\"inform\\"}}
",
              "policies.open-cluster-management.io/categories": "PR.DS DataSecurity",
              "policies.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
              "policies.open-cluster-management.io/standards": "NIST-CSF",
            },
            "creationTimestamp": "2020-05-17T22:56:03Z",
            "generation": 1,
            "labels": Object {
              "cluster-name": "calamari",
              "cluster-namespace": "calamari",
              "root-policy": "default.case1-test-policy",
            },
            "name": "default.case1-test-policy",
            "namespace": "calamari",
            "ownerReferences": Array [
              Object {
                "apiVersion": "policies.open-cluster-management.io/v1",
                "blockOwnerDeletion": true,
                "controller": true,
                "kind": "Policy",
                "name": "case1-test-policy",
                "uid": "e919bf5c-df16-4b90-ae01-a39da7138623",
              },
            ],
            "resourceVersion": "27550274",
            "selfLink": "/apis/policies.open-cluster-management.io/v1/namespaces/calamari/policies/default.case1-test-policy",
            "uid": "fcaf4465-0530-47e5-bbd6-b19c3b28699a",
          },
          "spec": Object {
            "disabled": false,
            "policy-templates": Array [
              Object {
                "objectDefinition": Object {
                  "apiVersion": "policies.ibm.com/v1alpha1",
                  "kind": "TrustedContainerPolicy",
                  "metadata": Object {
                    "name": "case1-test-policy-trustedcontainerpolicy",
                  },
                  "spec": Object {
                    "imageRegistry": "quay.io",
                    "namespaceSelector": Object {
                      "exclude": Array [
                        "kube-system",
                      ],
                      "include": Array [
                        "default",
                      ],
                    },
                    "remediationAction": "inform",
                    "severity": "low",
                  },
                },
              },
            ],
            "remediationAction": "inform",
          },
        },
        "roleBindingTemplates": Array [],
        "roleTemplates": Array [],
        "rules": Array [],
        "status": "unknown",
        "violations": Array [],
      },
    ],
  },
}
`;
